# snppit

./: AUTHORS  Compile_snppit.sh  LICENSE.txt  Makefile.am  Makefile.in  PrepDist.sh  README.md  configure  configure.ac  snppit  snppit-Darwin  snppit-Linux
ExampleData/: ExampleDataFile1.txt
OSX/pfr.xcodeproj/: eriq.mode1  eriq.mode1v3  eriq.pbxuser  project.pbxproj
docs/: logl-and-rank-thresholding.nb.html
shared/ecalibs/: ECA_Opt2.h  ECA_Opt3.c  ECA_Opt3.h  MathStatRand.c
shared/snpSumPed/: snp_sumped.c  snp_sumped.h  snp_sumped_main.c
shared/ut_hash-1.2/src/: uthash.h
src/: bayes_test.c  forback_abstracted.c  forback_abstracted.h  pbt_C_fb.c  pbt_C_fb.h  pbt_C_main.c  pbt_geno_compare.c  pbt_geno_compare.h  pbt_highlevel.c  pbt_highlevel.h  pbt_trio_mixture.c  pbt_trio_mixture.h  pfr_bits.c  pfr_forback.c  pfr_forback.h  pfr_pedigree_spec.c  pfr_pedigree_spec.h  pfr_read_genos.c  pfr_read_genos.h  pfr_utils.c  pfr_utils.h  prior_on_trios.c  prior_on_trios.h  snp_gtyp_err.c  test_hash_speed.c  test_hash_speed.h
test/: run_all_tests.sh  run_test.sh
test/input7/: datafile.txt  pars
test/input7/output-Darwin/: snppit_output_FDR_Summary.txt  snppit_output_ParentageAssignments.txt  (+2 more)
vignettes/: .gitignore  logl-and-rank-thresholding.Rmd
vignettes/inputs/: LOGL_0_TOP_500_snppit_output_ParentageAssignments.txt  LOGL_0_snppit_output_ParentageAssignments.txt  LOGL_10_snppit_output_ParentageAssignments.txt  LOGL_3_snppit_output_ParentageAssignments.txt  LOGL_5_TOP_50_snppit_output_ParentageAssignments.txt  LOGL_5_snppit_output_ParentageAssignments.txt
(+5 files in other folders)
