AM_CFLAGS =  -I$(top_srcdir)/shared/ecalibs   -I$(top_srcdir)/src  \
	 -I$(top_srcdir)/shared/ranlib/src  -I$(top_srcdir)/shared/ut_hash-1.2/src \
	 -I$(top_srcdir)/shared/snpSumPed
bin_PROGRAMS = snppit
snppit_SOURCES = shared/ranlib/src/com.c shared/ecalibs/ECA_MemAlloc.c shared/ecalibs/ECA_Opt3.c shared/ranlib/linpack/linpack.c shared/ecalibs/MathStatRand.c shared/ecalibs/MCTypesEtc.c src/pbt_C_fb.c src/pbt_C_main.c src/pbt_geno_compare.c src/pbt_highlevel.c src/pfr_pedigree_spec.c src/pfr_read_genos.c shared/ranlib/src/ranlib.c shared/snpSumPed/snp_sumped.c shared/ecalibs/ECA_print.c
